# DecimerServerAPI

./: .dockerignore  .gitignore  API_ENDPOINTS.md  DIFFERENCES.md  Dockerfile  Dockerfile.cuda  Dockerfile.cuda-tf  Dockerfile_original_single_stage  FAQ.md  INSTALLATION.md  LICENSE  Makefile  README.md  TODO_MCP_HARDENING.md  decimer_exampel.py  decimer_example.py  decimer_server.py  docker-compose.cuda.yml  docker-compose.local.yml  docker-compose.yml  environment.yml  environment_mac.yml  pyproject.toml  readme_api_calls.md  requirements.txt  requirements_mac.txt  win_make.bat
example_usage/: API_EXAMPLES.md  README.md  decimer_naked_api_eg_docker_only_example.py  decimer_server_usage_example.py  decimer_standalone_no_server.py
optional_standalone_no_server/: README.md  decimer_standalone_no_server.py
